--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
     "embla-carousel-react": "^8.0.0-rc19",
+    "firebase": "^11.0.2",
     "lucide-react": "^0.308.0",
     "next": "^14.0.4",
     "next-mdx-remote": "^4.4.1",
