--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@hookform/resolvers": "^3.3.4",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
@@ -49,6 +50,7 @@
     "embla-carousel-react": "^8.0.0-rc19",
     "firebase": "^11.0.2",
     "firebase-tools": "^13.27.0",
+    "graphql": "^16.9.0",
     "lucide-react": "^0.308.0",
     "next": "^14.0.4",
     "next-mdx-remote": "^4.4.1",
