--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-hook-form": "^7.49.3",
     "react-iframe": "^1.8.5",
     "react-resizable-panels": "^1.0.8",
+    "react-scroll-parallax": "^3.4.5",
     "react-wrap-balancer": "^1.1.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.1",
