--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "firebase-tools": "^13.27.0",
     "graphql": "^16.9.0",
     "lucide-react": "^0.308.0",
-    "next": "^14.0.4",
+    "next": "^15.1.0",
+    "next-cloudinary": "^6.16.0",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "node-html-parser": "^6.1.10",
